@@ -1,6 +1,7 @@
 Version 0.5.0
 -------------
   - Mouse support for applications
+  - Copy/paste mouse support for terminal
 
 Version 0.4.1
 -------------
